# remedy-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF_dependency_security.md  PRD_typst_backend.md  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/app/: engine_service.py  jobs.py  pdf_fix_routes.py  routes.py
docs/: index.md  typst_backend_decisions.md
docs/prds/: PRD_vlm_multi_lora_serving.md  SPEC_nemo_rl_brev_campaign.md  SPEC_vlm_multi_lora_serving.md
runbooks/: lamission-router-remediation.md
session/20260714_232247/: MOVE3_task_input_redesign.md  brev_state.json  compatibility_results_20260715.md  datafix_v3_handoff.md  datafix_v3_preflight.json  experiments.tsv  files.md  handoff.md  qwen25_sft_smoke2_20260716.md  qwen25_sft_smoke_20260715.md  repro_empty_adapter.py  repro_image_grid_thw.py  session_state.md  timeline.md  tiny_container_startup.sh
src/project_remedy/: accessibility_strategies.py  cli_office.py  config.py  content_stream_reorder.py  content_stream_repair.py  converter.py  epub_verifier.py  extractor.py  heading_feedback.py  html_strategy_remediator.py  html_to_epub.py  levels.py  office_acceptance.py  office_checker.py  pdf_checker.py  pdf_fixer.py  pdf_vision.py  pdf_wcag_verifier.py  vision_struct_reorder.py
tests/unit/: office_fixtures.py  rebuild_fixtures.py  test_acroform_gate.py  test_cli_office.py  (+53 more)
tools/: apply_adobe_compliance.py  build_tounicode.py  embed_missing_fonts.py  escalate_font_residue.py  fix_cidset.py  fix_content_splices.py  fix_glyph_widths.py  fix_ocg_config.py  fix_widths_from_verapdf.py  heal_tm.py  reclassify_font_residue.py  remediate_pdf_corpus.py  repair_content_streams.py  routing.json  run_font_residue_batch.py  run_large_batch.py  run_vision_eval.py  serve_remedy_router_peft.py  serve_remedy_router_vllm.py
(+128 files in other folders)
